tests/NormalTests/paczka1/fuzzy1/26470649.err
Error in line 3: 1P51Rvxm A501 44,6
Error in line 7: 1P51Rvxm A872 15,2
Error in line 15: 1P51Rvxm A536 9,2
Error in line 20: 1P51Rvxm S619 14,1
Error in line 21: A536 A536 86,5
Error in line 25: wsf8rvYKJBZ S619 81,6
Error in line 23: 1P51Rvxm A501 78,8
Error in line 28: A536 A501 80,1
Error in line 29: qQT S619 39,3
